--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ nav
     border-top:1px solid #fff;
 }
 #nav ul{
-    padding:30px 0;
+    padding:70px 0;
 }
 #nav a{
     padding:10px;
@@ -268,6 +268,7 @@ nav
     z-index:10;
     background-color:rgba(20,20,20,0.7);
     width:100%;
+    height: 100%;
     min-height:100vh;
 }
 /*----------------------------------------------------
