--- a/selfweb/src/App.scss
+++ b/selfweb/src/App.scss
@@ -44,7 +44,7 @@ li{
     font-size:7rem;
     color:#83FFE630;
     margin-top:0;
-    margin-bottom:0;
+    // margin-bottom:0;
     position:relative;
     letter-spacing:5px;
     font-weight:900;
@@ -97,37 +97,37 @@ li{
 }
 /*スクロールした時に追加されるクラス*/
 .fadein{
-    opacity: 1;
+    // opacity: 1;
 }
 /*テキストアニメーション*/
 .text-container{
-    overflow: hidden;
-    position: relative;
+    // overflow: hidden;
+    // position: relative;
 }
 .text-container__title{
-    display: block;
+    // display: block;
     // opacity: 0;
-    position: relative;
-    transition:all .5s .3s ease; 
-    z-index: 0;
+    // position: relative;
+    // transition:all .5s .3s ease; 
+    // z-index: 0;
 }
 .text-container:before{
-    background: #333;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transform: translateX(-100%);
-    transition:all .8s 0s ease; 
-    width: 100%;
-    z-index: 1;     
+    // background: #333;
+    // content: '';
+    // display: block;
+    // height: 100%;
+    // position: absolute;
+    // transform: translateX(-100%);
+    // transition:all .8s 0s ease; 
+    // width: 100%;
+    // z-index: 1;     
 }
 /*アニメーションするプロパティを設定します*/
 .text-container.active .text-container__title{
-    opacity: 1;
+    // opacity: 1;
 }
 .text-container.active:before{
-    transform: translateX(100%);        
+    // transform: translateX(100%);        
 }
 /*----------------------------------------------------
 header
